kubernetes/main/apps/labs/forgejo/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: forgejo
  namespace: labs
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: forgejo
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: traefik
            io.kubernetes.pod.namespace: networking
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
            - port: "2222"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            io.kubernetes.pod.namespace: observability
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    # same-node ClusterIP replies miss CT reverse-xlate (socketLB
    # hostNamespaceOnly + endpointRoutes) and hit ingress policy
    - fromEndpoints:
        - matchLabels:
            cnpg.io/cluster: postgres-1
            io.kubernetes.pod.namespace: database
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/instance: traefik-networking
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/instance: traefik-networking
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: postgres-1
            io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8
            - 172.16.0.0/12
            - 192.168.0.0/16
